Mob overflow issue solved

--- a/static/css/event.css
+++ b/static/css/event.css
@@ -21,6 +21,7 @@ body{
     background-color: #030A1D;
     color: white;
     overflow-x: hidden;
+    width: 100vw;
     background-repeat: repeat-y;
 }
 p,h1 {
@@ -49,17 +50,6 @@ p,h1 {
     opacity: 0.5;
     z-index: -1;
 }
-/* .texture{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: -1;
-    height: 100vh;
-    object-fit: cover;
-    width: 100vw;
-} */
 .dynamic-island{
     display: flex;
     gap: 20px;
@@ -237,7 +227,7 @@ section{
         flex-wrap: wrap;
         justify-content: center;
         row-gap: 30px;
-        column-gap: 50px;
+        column-gap: 40px;
     }
     .contacts_title{
         font-size: 30px;
@@ -362,7 +352,7 @@ section{
     }
     .event-name{
         font-weight: 500;
-        font-size: 40px;
+        font-size: 33px;
     }
     .event-description{
         font-weight: 400;
